--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --mode development"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +13,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "ts-loader": "^9.5.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.9",
@@ -23,10 +22,14 @@
     "@babel/preset-typescript": "^7.24.7",
     "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.39",
+    "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
+    "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.6",
+    "ts-loader": "^9.5.1",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
